[gd_scene load_steps=3 format=3 uid="uid://b7qjp4q35xkq8"]

[ext_resource type="Script" path="res://scripts/cards/card_pile_manager.gd" id="1_ypdmr"]
[ext_resource type="PackedScene" path="res://scenes/cards/card_dropzone.tscn" id="2_4jmew"]

[node name="CardPileManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ypdmr")

[node name="DrawPileZone" parent="." instance=ExtResource("2_4jmew")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -70.0
offset_right = 300.0
offset_bottom = 70.0
grow_vertical = 2
zone_type = "draw"

[node name="DiscardPileZone" parent="." instance=ExtResource("2_4jmew")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -70.0
offset_right = -100.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 2
zone_type = "discard"

[node name="HandZone" parent="." instance=ExtResource("2_4jmew")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -160.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
zone_type = "hand"

[node name="PlayZone" parent="." instance=ExtResource("2_4jmew")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
zone_type = "play"

[node name="AnimationLayer" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2bel" type="Label"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 15.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.392157)
theme_override_font_sizes/font_size = 18
text = "卡牌名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueLabel" type="Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "卡牌描述文本"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3